--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -26,6 +26,7 @@ sdk-integration-tests:
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
     SERVICE_SHARE_ENV: LVE
+    SERVICE_SANITIZE_ENV: LVE
 
   before_script:
     - echo $ENV
@@ -85,7 +86,9 @@ sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_SHARE_ENV}
         TEST: ITShareTest
-  allow_failure: false
+      - CLOUD: [AWS]  # FIXME: Add GCP when supported
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: ITSanitizeTest
   rules:
     - if: $CI_COMMIT_BRANCH
   script:
