--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -25,6 +25,7 @@ java-sdk-integration-tests:
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SANITIZE_ENV: LVE
 
   before_script:
     - echo $ENV
@@ -81,6 +82,9 @@ java-sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
+      - CLOUD: [AWS]  # FIXME: Add GCP when supported
+        ENV: ${SERVICE_SANITIZE_ENV}
+        TEST: ITSanitizeTest
   rules:
     - if: '$CLOUD == "GCP" && $TEST == "ITFileScanTest"'
       allow_failure: true
