--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -25,6 +25,7 @@ java-sdk-integration-tests:
     SERVICE_USER_INTEL_ENV: LVE
     SERVICE_REDACT_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SHARE_ENV: LVE
 
   before_script:
     - echo $ENV
@@ -81,12 +82,10 @@ java-sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_SHARE_ENV}
+        TEST: ITShareTest
   rules:
-    - if: '$CLOUD == "GCP" && $TEST == "ITFileScanTest"'
-      allow_failure: true
-    - if: '$CLOUD == "GCP" && $TEST != "ITFileScanTest"'
-      allow_failure: false
-    - if: '$CLOUD != "GCP"'
       allow_failure: false
   script:
     - mvn $MAVEN_CLI_OPTS test -Dtest=${TEST}
