--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -9,6 +9,7 @@ examples:
           - audit/log
           - audit/log_bulk
           - audit/log_bulk_async
+          - audit/log_bulk_async_with_vault
           - audit/log_n_sign
           - audit/log_verbose
           - audit/root
@@ -50,11 +51,15 @@ examples:
           - redact/redact_multiconfig
           - redact/structured
           - redact/text
+          # - share/folder_create_and_delete
+          # - share/item_life_cycle
+          # - share/put_split_upload
+          # - share/put_transfer_method_multipart
+          # - share/put_transfer_method_post_url
           - vault/encrypt
           - vault/encrypt_structured
           - vault/rotate
           - vault/sign
-          - audit/log_bulk_async_with_vault
           - vault/get
   image: maven:3.9.7-eclipse-temurin-${JAVA_VERSION}
   before_script:
