--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -28,6 +28,7 @@ sdk-integration-tests:
     SERVICE_REDACT_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
+    SERVICE_SHARE_ENV: LVE
 
   before_script:
     - echo $ENV
@@ -88,6 +89,9 @@ sdk-integration-tests:
       - CLOUD: [AWS]
         ENV: ${SERVICE_SANITIZE_ENV}
         TEST: ITSanitizeTest
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_SHARE_ENV}
+        TEST: ITShareTest
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
