--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -27,6 +27,7 @@ sdk-integration-tests:
     SERVICE_VAULT_ENV: LVE
     SERVICE_SHARE_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
+    SERVICE_AUTHZ_ENV: LVE
 
   before_script:
     - echo $ENV
@@ -89,6 +90,9 @@ sdk-integration-tests:
       - CLOUD: [AWS]  # FIXME: Add GCP when supported
         ENV: ${SERVICE_SANITIZE_ENV}
         TEST: ITSanitizeTest
+      - CLOUD: [AWS, GCP]
+        ENV: ${SERVICE_AUTHZ_ENV}
+        TEST: ITAuthZTest
   rules:
     - if: $CI_COMMIT_BRANCH
   script:
